@@ -67,12 +67,10 @@
             "int16",
             "int32",
             "int64",
-            "int128",
             "uint8",
             "uint16",
             "uint32",
-            "uint64",
-            "uint128"
+            "uint64"
           ]
         },
         "labels": {
@@ -117,9 +115,7 @@
       "properties": {
         "name": { "$ref": "#/$defs/nameType" },
         "type": { "const": "list" },
-        "itemType": {
-          "$ref": "#/$defs/oneOfTypes"
-        },
+        "itemType": { "$ref": "#/$defs/oneOfTypes" },
         "minItems": {
           "description": "The minimum list size.",
           "type": "integer",
@@ -192,7 +188,6 @@
             "ipv6",
             "mac",
             "uid",
-            "uri",
             "url",
             "uuid"
           ]
@@ -201,7 +196,7 @@
       "required": [ "type" ]
     },
     "stringType": {
-      "description": "A string having a possibly bounded size. Implementations might need to use a NUL terminator for multi-field messages where a string is followed by another field so that its boundary can be determined.",
+      "description": "A string having a possibly bounded size. Implementations may need to use a NUL terminator for multi-field messages where a string is followed by another field so that its boundary can be determined.",
       "type": "object",
       "properties": {
         "name": { "$ref": "#/$defs/nameType" },
@@ -267,4 +262,4 @@
     "set_request": [ "set_response" ],
     "set_response": [ "set_request" ]
   }
-} 
+}
